# rmtree

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  garden.yaml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs
